--- a/MusicPlatform/wwwroot/css/templatemo.css
+++ b/MusicPlatform/wwwroot/css/templatemo.css
@@ -2,13 +2,16 @@
 @import url(https://mcansh.github.io/yeezy-logo-font/assets/css/font.css);
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-/*
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
-Lava Landing Page
-
-https://templatemo.com/tm-540-lava-landing-page
-
-*/
+.main-content {
+    flex-grow: 1;
+    padding-top: 100px; 
+}
 
 /* ---------------------------------------------
 Table of contents
@@ -242,435 +245,88 @@ header
 --------------------------------------------- 
 */
 
-.background-header {
-    background-color: #fff;
-    height: 80px !important;
-    position: fixed !important;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.15) !important;
-}
-
-    .background-header .logo,
-    .background-header .main-nav .nav li a {
-        color: #1e1e1e !important;
-    }
-
-    .background-header .main-nav .nav li:hover a {
-        color: #ff5500 !important; /* SoundCloud Orange */
-    }
-
-    .background-header .nav li a.active {
-        color: #ff5500 !important; /* SoundCloud Orange */
-    }
-
 .header-area {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: auto;
     z-index: 100;
-    height: 100px;
-    -webkit-transition: all .5s ease 0s;
-    -moz-transition: all .5s ease 0s;
-    -o-transition: all .5s ease 0s;
     transition: all .5s ease 0s;
 }
 
     .header-area .main-nav {
-        min-height: 80px;
+        min-height: 0;
         background: transparent;
+        display: flex;
+        justify-content: center;
     }
-
-        .header-area .main-nav .logo {
-            line-height: 80px;
-            color: #191a20;
-            font-size: 28px;
-            font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            float: left;
-            -webkit-transition: all 0.3s ease 0s;
-            -moz-transition: all 0.3s ease 0s;
-            -o-transition: all 0.3s ease 0s;
-            transition: all 0.3s ease 0s;
-        }
-
 
         .header-area .main-nav .nav {
-            float: left;
-            margin-top: 27px;
-            margin-left: 15%;
-            margin-right: 0px;
-            background-color: #fff;
-            padding: 0px 20px;
-            -webkit-transition: all 0.3s ease 0s;
-            -moz-transition: all 0.3s ease 0s;
-            -o-transition: all 0.3s ease 0s;
-            transition: all 0.3s ease 0s;
-            position: relative;
-            z-index: 999;
+            float: none;
+            margin: 0;
+            padding: 5px 10px; /* Reduced vertical padding */
+            border-radius: 50px;
+            background-color: rgba(255, 255, 255, 0.25);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
-
-            .header-area .main-nav .nav li {
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-
-                .header-area .main-nav .nav li:last-child {
-                    padding-right: 0px;
-                }
-
-                .header-area .main-nav .nav li a {
-                    display: block;
-                    font-weight: 500;
-                    font-size: 13px;
-                    color: #7a7a7a;
-                    text-transform: uppercase;
-                    -webkit-transition: all 0.3s ease 0s;
-                    -moz-transition: all 0.3s ease 0s;
-                    -o-transition: all 0.3s ease 0s;
-                    transition: all 0.3s ease 0s;
-                    height: 40px;
-                    line-height: 40px;
-                    border: transparent;
-                    letter-spacing: 1px;
-                }
-
-                .header-area .main-nav .nav li:hover a {
-                    color: #ff5500; /* SoundCloud Orange */
-                }
-
-                .header-area .main-nav .nav li.submenu {
-                    position: relative;
-                    padding-right: 35px;
-                }
-
-                    .header-area .main-nav .nav li.submenu:after {
-                        font-family: FontAwesome;
-                        content: "\f107";
-                        font-size: 12px;
-                        color: #7a7a7a;
-                        position: absolute;
-                        right: 18px;
-                        top: 12px;
-                    }
-
-                    .header-area .main-nav .nav li.submenu ul {
-                        position: absolute;
-                        width: 200px;
-                        box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
-                        overflow: hidden;
-                        top: 40px;
-                        opacity: 0;
-                        transform: translateY(-2em);
-                        visibility: hidden;
-                        z-index: -1;
-                        transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
-                    }
-
-                        .header-area .main-nav .nav li.submenu ul li {
-                            margin-left: 0px;
-                            padding-left: 0px;
-                            padding-right: 0px;
-                        }
-
-                            .header-area .main-nav .nav li.submenu ul li a {
-                                display: block;
-                                background: #fff;
-                                color: #7a7a7a !important;
-                                padding-left: 20px;
-                                height: 40px;
-                                line-height: 40px;
-                                -webkit-transition: all 0.3s ease 0s;
-                                -moz-transition: all 0.3s ease 0s;
-                                -o-transition: all 0.3s ease 0s;
-                                transition: all 0.3s ease 0s;
-                                position: relative;
-                                font-size: 13px;
-                                border-bottom: 1px solid #f5f5f5;
-                            }
-
-                                .header-area .main-nav .nav li.submenu ul li a:before {
-                                    content: '';
-                                    position: absolute;
-                                    width: 0px;
-                                    height: 40px;
-                                    left: 0px;
-                                    top: 0px;
-                                    bottom: 0px;
-                                    -webkit-transition: all 0.3s ease 0s;
-                                    -moz-transition: all 0.3s ease 0s;
-                                    -o-transition: all 0.3s ease 0s;
-                                    transition: all 0.3s ease 0s;
-                                    background: #ff5500; /* SoundCloud Orange */
-                                }
-
-                                .header-area .main-nav .nav li.submenu ul li a:hover {
-                                    background: #fff;
-                                    color: #ff5500 !important; /* SoundCloud Orange */
-                                    padding-left: 25px;
-                                }
-
-                                    .header-area .main-nav .nav li.submenu ul li a:hover:before {
-                                        width: 3px;
-                                    }
-
-                    .header-area .main-nav .nav li.submenu:hover ul {
-                        visibility: visible;
-                        opacity: 1;
-                        z-index: 1;
-                        transform: translateY(0%);
-                        transition-delay: 0s, 0s, 0.3s;
-                    }
 
         .header-area .main-nav .menu-trigger {
-            cursor: pointer;
-            display: block;
-            position: absolute;
-            top: 23px;
-            width: 32px;
-            height: 40px;
-            text-indent: -9999em;
-            z-index: 99;
-            right: 40px;
-            display: none;
+            display: none !important;
         }
 
-            .header-area .main-nav .menu-trigger span,
-            .header-area .main-nav .menu-trigger span:before,
-            .header-area .main-nav .menu-trigger span:after {
-                -moz-transition: all 0.4s;
-                -o-transition: all 0.4s;
-                -webkit-transition: all 0.4s;
-                transition: all 0.4s;
-                background-color: #1e1e1e;
-                display: block;
-                position: absolute;
-                width: 30px;
-                height: 2px;
-                left: 0;
-            }
-
-.background-header .main-nav .menu-trigger span,
-.background-header .main-nav .menu-trigger span:before,
-.background-header .main-nav .menu-trigger span:after {
-    background-color: #1e1e1e;
-}
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-    -moz-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-    background-color: #1e1e1e;
-    display: block;
-    position: absolute;
-    width: 30px;
-    height: 2px;
-    left: 0;
-    width: 75%;
-}
-
-.background-header .main-nav .menu-trigger span:before,
-.background-header .main-nav .menu-trigger span:after {
-    background-color: #1e1e1e;
-}
-
-.header-area .main-nav .menu-trigger span:before,
-.header-area .main-nav .menu-trigger span:after {
-    content: "";
-}
-
-.header-area .main-nav .menu-trigger span {
-    top: 16px;
-}
-
-    .header-area .main-nav .menu-trigger span:before {
-        -moz-transform-origin: 33% 100%;
-        -ms-transform-origin: 33% 100%;
-        -webkit-transform-origin: 33% 100%;
-        transform-origin: 33% 100%;
-        top: -10px;
-        z-index: 10;
+    /* On scroll, the 'header-sticky' class is added by JS. We use it to make the header less transparent. */
+    .header-area.header-sticky .main-nav .nav {
+        background-color: rgba(255, 255, 255, 0.85);
     }
 
-    .header-area .main-nav .menu-trigger span:after {
-        -moz-transform-origin: 33% 0;
-        -ms-transform-origin: 33% 0;
-        -webkit-transform-origin: 33% 0;
-        transform-origin: 33% 0;
-        top: 10px;
+    .header-area .main-nav .logo {
+        line-height: 60px; /* Adjust line-height to match new, shorter nav */
+        margin-right: 30px;
+        padding: 0 15px;
+        color: #1e1e1e;
     }
 
-.header-area .main-nav .menu-trigger.active span,
-.header-area .main-nav .menu-trigger.active span:before,
-.header-area .main-nav .menu-trigger.active span:after {
-    background-color: transparent;
-    width: 100%;
-}
-
-    .header-area .main-nav .menu-trigger.active span:before {
-        -moz-transform: translateY(6px) translateX(1px) rotate(45deg);
-        -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
-        -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
-        transform: translateY(6px) translateX(1px) rotate(45deg);
-        background-color: #1e1e1e;
-    }
-
-.background-header .main-nav .menu-trigger.active span:before {
-    background-color: #1e1e1e;
-}
-
-.header-area .main-nav .menu-trigger.active span:after {
-    -moz-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-    -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-    -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
-    transform: translateY(-6px) translateX(1px) rotate(-45deg);
-    background-color: #1e1e1e;
-}
-
-.background-header .main-nav .menu-trigger.active span:after {
-    background-color: #1e1e1e;
-}
-
-.header-area.header-sticky {
-    min-height: 80px;
-}
-
-    .header-area.header-sticky .nav {
-        margin-top: 20px !important;
-    }
-
-        .header-area.header-sticky .nav li a.active {
-            color: #ff5500; /* SoundCloud Orange */
-        }
-
-@media (max-width: 1200px) {
     .header-area .main-nav .nav li {
-        padding-left: 12px;
-        padding-right: 12px;
+        padding: 0;
     }
 
-    .header-area .main-nav:before {
-        display: none;
-    }
-}
-
-@media (max-width: 991px) {
-    .logo {
-        text-align: center;
-        float: none !important;
-    }
-
-    .header-area {
-        background-color: #f7f7f7;
-        padding: 0px 15px;
-        height: 80px;
-        box-shadow: none;
-        text-align: center;
-    }
-
-        .header-area .container {
-            padding: 0px;
+        .header-area .main-nav .nav li a {
+            height: 50px; /* Shorter height */
+            line-height: 50px; /* Align text vertically */
+            padding: 0 20px;
+            color: #333;
+            font-weight: 600;
+            border-radius: 30px;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
 
-        .header-area .logo {
-            margin-left: 30px;
-        }
-
-        .header-area .menu-trigger {
-            display: block !important;
-        }
-
-        .header-area .main-nav {
-            overflow: hidden;
-        }
-
-            .header-area .main-nav .nav {
-                float: none;
-                width: 100%;
-                margin-top: 0px !important;
-                display: none;
-                -webkit-transition: all 0s ease 0s;
-                -moz-transition: all 0s ease 0s;
-                -o-transition: all 0s ease 0s;
-                transition: all 0s ease 0s;
-                margin-left: 0px;
+            /* Hover and Active states */
+            .header-area .main-nav .nav li a:hover,
+            .header-area .main-nav .nav li a.active {
+                color: #ff5500; /* Theme Orange! */
+                background-color: rgba(255, 255, 255, 0.5);
             }
 
-                .header-area .main-nav .nav li:first-child {
-                    border-top: 1px solid #eee;
-                }
-
-                .header-area .main-nav .nav li {
-                    width: 100%;
-                    background: #fff;
-                    border-bottom: 1px solid #eee;
-                    padding-left: 0px !important;
-                    padding-right: 0px !important;
-                }
-
-                    .header-area .main-nav .nav li a {
-                        height: 50px !important;
-                        line-height: 50px !important;
-                        padding: 0px !important;
-                        border: none !important;
-                        background: #f7f7f7 !important;
-                        color: #191a20 !important;
-                    }
-
-                        .header-area .main-nav .nav li a:hover {
-                            background: #eee !important;
-                            color: #ff5500 !important; /* SoundCloud Orange */
-                        }
-
-                    .header-area .main-nav .nav li.submenu ul {
-                        position: relative;
-                        visibility: inherit;
-                        opacity: 1;
-                        z-index: 1;
-                        transform: translateY(0%);
-                        transition-delay: 0s, 0s, 0.3s;
-                        top: 0px;
-                        width: 100%;
-                        box-shadow: none;
-                        height: 0px;
-                    }
-
-                        .header-area .main-nav .nav li.submenu ul li a {
-                            font-size: 12px;
-                            font-weight: 400;
-                        }
-
-                            .header-area .main-nav .nav li.submenu ul li a:hover:before {
-                                width: 0px;
-                            }
-
-                        .header-area .main-nav .nav li.submenu ul.active {
-                            height: auto !important;
-                        }
-
-                    .header-area .main-nav .nav li.submenu:after {
-                        color: #3B566E;
-                        right: 25px;
-                        font-size: 14px;
-                        top: 15px;
-                    }
-
-                    .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
-                        height: 0px;
-                    }
-}
-
-@media (min-width: 992px) {
-    .header-area .main-nav .nav {
-        display: flex !important;
+/* Mobile Menu Styles (remain mostly the same) */
+@media (max-width: 991px) {
+    .header-area {
+        top: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+        border-radius: 0;
     }
-}
 
+        .header-area .main-nav .nav {
+            background-color: #fff;
+            border-radius: 0;
+            padding: 0;
+        }
+}
 
 /* 
 ---------------------------------------------
@@ -716,6 +372,12 @@ welcome
         margin-bottom: 40px;
         position: relative;
     }
+
+#welcome {
+    margin-top: -100px; /* This must be the exact negative of the padding-top */
+    position: relative; /* Ensures z-index is respected */
+    z-index: 1; /* Sits below the header (which has z-index: 100) */
+}
 
 @media (max-width: 1420px) {
     .welcome-area .header-text {
